--- a/frontend/index.html
+++ b/frontend/index.html
@@ -474,29 +474,18 @@
             }
         }
 
-        do_relative_move(slot_i, aaDirection) {
+        do_relative_move(slot_i, dir) {
             const delta = parseInt(this.bumper_increment_ref.current.value) || 10.0;
-            let pos = [...this.state.pos]; // copy
-            switch(aaDirection) {
-                case "u": pos[1] += delta; break;
-                case "d": pos[1] -= delta; break;
-                case "e": pos[0] += delta; break;
-                case "w": pos[0] -= delta; break;
-                case "s": pos[2] += delta; break;
-                case "n": pos[2] -= delta; break;
-            }
-            // TODO stop using local state.pos, just send `ActorWatcher::get(${slot_i}).pos += Vector3f::${dir} * ${delta};`
-            this.do_paste_coords(slot_i, pos);
+            AngelScript.exec(`ActorWatcher::get(${slot_i}).pos += Vector3f::${dir} * ${delta};`);
         }
 
         do_absolute_move(slot_i) {
             let pos = this.savestate_textbox_pos_ref.current.value;
-            pos = pos.replaceAll(",", "").split(" ").filter(x => x !== "").map(x => parseFloat(x));
+            pos = pos.replaceAll(",", " ").split(" ").filter(x => x !== "").map(x => parseFloat(x));
             let rot = this.savestate_textbox_rot_ref.current.value;
-            rot = rot.replaceAll(",", "").split(" ").filter(x => x !== "").map(x => parseFloat(x));
+            rot = rot.replaceAll(",", " ").split(" ").filter(x => x !== "").map(x => parseFloat(x));
 
-            // TODO accept+convert ui coords with a flag
-            // XXX generally ignoring physics coords + height offset?
+            // TODO engine/ui/objmap coord conversions?
             this.do_paste_coords(slot_i, pos, rot);
         }
 
@@ -525,8 +514,8 @@
                         ${actorName}(${ptr})
                         <div class="actor_toggles">
                             <div>
-                                <label title="ActorWatcher::doWsLog(${i}, checked)" class="faketoggle doWsLog" for="aw${i}_doWsLog">
-                                    <input type="checkbox" id="aw${i}_doWsLog" checked=${state.doWsLog} onChange=${ e => this.do_send_toggle(i, "doWsLog", e.target.checked) } />
+                                <label title="ActorWatcher::doWSLog(${i}, checked)" class="faketoggle doWSLog" for="aw${i}_doWsLog">
+                                    <input type="checkbox" id="aw${i}_doWsLog" checked=${state.doWSLog} onChange=${ e => this.do_send_toggle(i, "doWSLog", e.target.checked) } />
                                     <span class="fakebutton pushbutton">ws</span>
                                 </label>
                                 <label title="ActorWatcher::doTextWriter(${i}, checked)" class="faketoggle doTextWriter" for="aw${i}_doTextWriter">
@@ -556,6 +545,16 @@
                             </div>
 
                             <div class="row2">
+                                <label title="ActorWatcher::doWSRigidBody(${i}, flagset_t)" class="faketoggle doWSRigidBody" for="aw${i}_doWSRigidBody">
+                                    <input type="checkbox" id="aw${i}_doWSRigidBody" checked=${state.doWSRigidBody}
+                                           onChange=${ e => this.do_send_toggle(i, "doWSRigidBody", e.target.checked, 0, 0xffffffffffffffffn) } />
+                                    <span class="fakebutton pushbutton">ws</span>
+                                </label>
+                                <label title="ActorWatcher::doTextWriterRigidBody(${i}, flagset_t)" class="faketoggle doTextWriterRigidBody" for="aw${i}_doTextWriterRigidBody">
+                                    <input type="checkbox" id="aw${i}_doTextWriterRigidBody" checked=${state.doTextWriterRigidBody}
+                                           onChange=${ e => this.do_send_toggle(i, "doTextWriterRigidBody", e.target.checked, 0, 0xffffffffffffffffn) } />
+                                    <span class="fakebutton pushbutton">txt</span>
+                                </label>
                                 <label title="ActorWatcher::doDrawRigidBodyPos(${i}, flagset_t)" class="faketoggle doDrawRigidBodyPos" for="aw${i}_doDrawRigidBodyPos">
                                     <input type="checkbox" id="aw${i}_doDrawRigidBodyPos" checked=${state.doDrawRigidBodyPos}
                                            onChange=${ e => this.do_send_toggle(i, "doDrawRigidBodyPos", e.target.checked, 0, 0xffffffffffffffffn) } />
@@ -628,13 +627,13 @@
                         <span>Move by <input style="width: 60px;" type="number" placeholder="10" size="4" min="0" max="10000" step="any" ref=${this.bumper_increment_ref} />m:</span>
                         <br />
                         <br />
-                        <button title="y-" style="color: var(--vec-green);" onClick=${ () => this.do_relative_move(i, "d") } class="pushbutton">down</button>
-                        <button title="z-" style="color: var(--vec-blue);"  onClick=${ () => this.do_relative_move(i, "n") } class="pushbutton">north</button>
-                        <button title="y+" style="color: var(--vec-green);" onClick=${ () => this.do_relative_move(i, "u") } class="pushbutton">\xa0up\xa0</button>
+                        <button title="y-" style="color: var(--vec-green);" onClick=${ () => this.do_relative_move(i, "DOWN" ) } class="pushbutton">down</button>
+                        <button title="z-" style="color: var(--vec-blue);"  onClick=${ () => this.do_relative_move(i, "NORTH") } class="pushbutton">north</button>
+                        <button title="y+" style="color: var(--vec-green);" onClick=${ () => this.do_relative_move(i, "UP"   ) } class="pushbutton">\xa0up\xa0</button>
                         <br />
-                        <button title="x-" style="color: var(--vec-red);"   onClick=${ () => this.do_relative_move(i, "w") } class="pushbutton">west</button>
-                        <button title="z+" style="color: var(--vec-blue);"  onClick=${ () => this.do_relative_move(i, "s") } class="pushbutton">south</button>
-                        <button title="x+" style="color: var(--vec-red);"   onClick=${ () => this.do_relative_move(i, "e") } class="pushbutton">east</button>
+                        <button title="x-" style="color: var(--vec-red);"   onClick=${ () => this.do_relative_move(i, "WEST" ) } class="pushbutton">west</button>
+                        <button title="z+" style="color: var(--vec-blue);"  onClick=${ () => this.do_relative_move(i, "SOUTH") } class="pushbutton">south</button>
+                        <button title="x+" style="color: var(--vec-red);"   onClick=${ () => this.do_relative_move(i, "EAST" ) } class="pushbutton">east</button>
                     </div>
 
                     <div class="savestate_slot_actions">
